--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_questionnaires">QuestionnairesActivity</string>
+    <string name="next">NEXT</string>
+    <string name="never">never</string>
+    <string name="infrequently">infrequently</string>
+    <string name="sometimes">sometimes</string>
+    <string name="frequently">frequently</string>
+    <string name="always">always</string>
+    <string name="number_of_questions">Total questions</string>
+    <string name="total_points">Total points:</string>
+    <string name="avg_points">average points</string>
+    <string name="result_info">Result info</string>
 </resources>
