--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="total_points">Total points:</string>
     <string name="avg_points">average points</string>
     <string name="result_info">Result info</string>
+    <string name="ok">OK</string>
 </resources>
